--- a/src/view/Registrate.fxml
+++ b/src/view/Registrate.fxml
@@ -1,48 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
 <?import java.lang.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
+<BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RegistrateController">
+   <top>
+      <Label text="Registrieren" BorderPane.alignment="CENTER">
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding></Label>
+   </top>
    <center>
       <VBox spacing="10.0" BorderPane.alignment="CENTER">
          <children>
             <HBox spacing="10.0">
                <children>
-                  <VBox spacing="10.0">
+                  <VBox spacing="20.0">
                      <children>
                         <Label text="Benutzername:" />
                         <Label text="Passwort:" />
+                        <Label text="Pfad zu Schlüssel" />
                      </children>
                   </VBox>
                   <VBox spacing="10.0">
                      <children>
                         <TextField fx:id="userName" />
                         <PasswordField fx:id="password" />
+                        <TextField fx:id="pathForKey" maxHeight="-Infinity" maxWidth="-Infinity" />
                      </children>
                   </VBox>
                </children>
             </HBox>
-            <Button fx:id="login" mnemonicParsing="false" onAction="#loginAction" text="Anmelden" />
-            <Button fx:id="callRegistrate" mnemonicParsing="false" onAction="#callRegistrateAction" text="Registrieren">
-               <font>
-                  <Font size="9.0" />
-               </font>
-            </Button>
+            <Button fx:id="saveKey" mnemonicParsing="false" onAction="#saveKeyAction" text="Schlüssel speichern" />
+            <Button fx:id="send" mnemonicParsing="false" onAction="#sendAction" text="Senden" />
          </children>
       </VBox>
    </center>
-   <top>
-      <Label text="Wilkommen!" BorderPane.alignment="CENTER">
-         <padding>
-            <Insets bottom="10.0" />
-         </padding>
-      </Label>
-   </top>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
