--- a/src/view/View.fxml
+++ b/src/view/View.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <VBox spacing="10.0" BorderPane.alignment="CENTER">
          <children>
@@ -21,14 +21,14 @@
                   </VBox>
                   <VBox spacing="10.0">
                      <children>
-                        <TextField fx:id="userName" />
-                        <PasswordField fx:id="password" />
+                        <TextField id="userName" />
+                        <PasswordField id="password" />
                      </children>
                   </VBox>
                </children>
             </HBox>
-            <Button fx:id="login" mnemonicParsing="false" onAction="#loginAction" text="Anmelden" />
-            <Button fx:id="callRegistrate" mnemonicParsing="false" onAction="#callRegistrateAction" text="Registrieren">
+            <Button id="login" mnemonicParsing="false" text="Anmelden" />
+            <Button id="registrate" mnemonicParsing="false" text="Registrieren">
                <font>
                   <Font size="9.0" />
                </font>
